--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <script src="./js/app.js"></script>
+    <script type="module" src="./js/app.js"></script>
 </body>
 
 </html>
