--- a/app/index.html
+++ b/app/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./css/main.css" rel="stylesheet">
+    <link href="./css/styles.css" rel="stylesheet">
     <title>Webdesign</title>
 </head>
 
 <body>
-    <script type="module" src="./js/app.js"></script>
+    <script src="vendors/routie.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
 
 </html>
