--- a/app/index.html
+++ b/app/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./css/styles.css" rel="stylesheet">
+    <script src="https://unpkg.com/hyperhtml@latest/min.js"></script>
     <title>Webdesign</title>
 </head>
 
 <body>
     <script src="vendors/routie.js"></script>
-    <script src="modules/helpers.js"></script>
     <script type="module" src="./app.js"></script>
 </body>
 
