--- a/app/index.html
+++ b/app/index.html
@@ -5,12 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./css/styles.css" rel="stylesheet">
-    <script src="https://unpkg.com/hyperhtml@latest/min.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
+        crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:300,400|Roboto:300,400" rel="stylesheet">
     <title>Webdesign</title>
 </head>
 
 <body>
     <script src="vendors/routie.js"></script>
+    <script src="vendors/hyperHTML.js"></script>
     <script type="module" src="./app.js"></script>
 </body>
 
