working with dist, minify js

--- a/app/index.html
+++ b/app/index.html
@@ -14,10 +14,12 @@
 </head>
 
 <body>
+    <!--build:js js/main.min.js -->
     <script src='vendors/hyperHTML.js'></script>
     <script src='vendors/hyperHTML-app.js'></script>
     <script type='module' src='./app.js'></script>
-    <!-- <script data-main='app' src='require.js'></script> -->
+    <!-- endbuild -->
+
 </body>
 
 </html>
