--- a/app/index.html
+++ b/app/index.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset='UTF-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
+    <!--build:css css/styles.min.css-->
     <link href='https://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet'>
     <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.1.0/css/all.css' integrity='sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt'
         crossorigin='anonymous'>
     <link href='https://fonts.googleapis.com/css?family=Josefin+Slab:300,400|Roboto:300,400' rel='stylesheet'>
     <link href='./css/styles.css' rel='stylesheet'>
+    <!--endbuild-->
 
     <title>Webdesign</title>
 </head>
